--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -11,12 +11,12 @@
 .centered-form-box {
   background: #fff;
   display: flex;
-  justify-content: "space-evenly";
+  justify-content: space-evenly;
   flex-direction: column;
+  gap: 16px;
   padding: 24px;
   width: 350px;
   margin: 15% auto;
-  max-height: 290px;
   border-radius: 6px;
   box-shadow: 0px 1px 2px 0px rgba(60, 64, 67, 0.3),
     0px 1px 3px 1px rgba(60, 64, 67, 0.15);
